# mlprojects

./: README.md  main.py  pyproject.toml  requirements.txt  setup.py
notebook/: eda student.ipynb  modeltraining.ipynb
notebook/catboost_info/: catboost_training.json  time_left.tsv
notebook/catboost_info/learn/: events.out.tfevents
src/: exception.py  logger.py
